--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,8 +35,8 @@ application.langs="en"
 #
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:~/open-source/work/studentstore/database/studentstore"
-db.default.user=sa
-db.default.password="1234"
+# db.default.user=
+# db.default.password=
 
 # Evolutions
 # ~~~~~
