--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="***REMOVED***"
+play.http.secret.key=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
@@ -42,6 +42,8 @@ db.default.url="jdbc:postgresql:studentstore?user=***REMOVED***&password=***REMO
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+
+play.filters.hosts.allowed = [${?DEPLOYED_HOST}, "localhost:9000"]
 
 # Logger
 # ~~~~~
