--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,10 @@
-version = "3.0.0-RC3"
-
-indent.defnSite = 2
+version = 2.4.2
+project.git = true
+maxColumn = 120
+align = more
+assumeStandardLibraryStripMargin = true
+rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
+rewrite.redundantBraces.stringInterpolation = true
+spaces.afterTripleEquals = true
+continuationIndent.defnSite = 2
+includeCurlyBraceInSelectChains = false
