Vendor all web dependencies

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,13 +28,19 @@ application.langs="en"
 # Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
+play.assets {
+  path = "/public"
+  urlPrefix = "/assets"
+}
+
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql:studentstore?user=***REMOVED***&password=***REMOVED***-pass"
+db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL;DATABASE_TO_UPPER=false;CASE_INSENSITIVE_IDENTIFIERS=TRUE"
+# db.default.driver=org.postgresql.Driver
+# db.default.url="jdbc:postgresql:studentstore?user=***REMOVED***&password=***REMOVED***-pass"
 # db.default.user="***REMOVED***"
 # db.default.password="***REMOVED***-pass"
 
